# zuriHNGZtask2

./: .env  .gitignore  DOCUMENTATION.md  README.md  build.sh  pyproject.toml
task2/Core/: models.py  serializers.py  urls.py  views.py
task2/task2/: settings.py  urls.py
